Edit timeCard features in admin page; datePickers; UX improvements for data entry; code cleanup;

--- a/app/.env.development
+++ b/app/.env.development
@@ -1,3 +1,5 @@
 REACT_APP_HTTPS=true
 HTTPS=true
-REACT_APP_API_URL="https://localhost:3000"
+REACT_APP_API_URL="https://localhost"
+REACT_APP_COMPANY_ID="60191e7e41396b05443b8b95"
+REACT_APP_GIT_TOKEN="45c102704e8d1dc679f313076cd08a9f40ff75e8"
