--- a/app/package.json
+++ b/app/package.json
@@ -11,12 +11,14 @@
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
+    "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.0",
     "react-icons": "^4.1.0",
+    "react-mobile-datepicker": "^4.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^2.0.5",
     "react-scroll": "^1.8.1",
     "react-to-print": "^2.12.2",
     "redux": "^4.0.5",
