Added breakTime edit; Added WorkingTime edit; Fixed various time input problems; Finished Notes functionality; Reworked Print mode - made page split function for longer tables;

--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,11 @@
     "axios": "^0.21.1",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.20",
+    "nanoid": "^3.1.20",
     "react": "^17.0.1",
     "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.1",
-    "react-dropdown": "^1.9.0",
+    "react-dropdown": "github:AgrisJ/react-dropdown",
     "react-icons": "^4.1.0",
     "react-mobile-datepicker": "^4.0.2",
     "react-redux": "^7.2.2",
