language implemented; api store functions refactored; visual improvements; bugs fixed;

--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "html-react-parser": "^1.2.4",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.20",
     "nanoid": "^3.1.20",
@@ -15,6 +16,7 @@
     "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-dropdown": "github:AgrisJ/react-dropdown",
+    "react-flags-select": "^2.1.2",
     "react-icons": "^4.1.0",
     "react-mobile-datepicker": "^4.0.2",
     "react-redux": "^7.2.2",
