SelectedYear, App Locker, EditProjects, companyId and other improvements

--- a/app/.env.production
+++ b/app/.env.production
@@ -2,3 +2,4 @@ REACT_APP_HTTPS=true
 HTTPS=true
 REACT_APP_API_URL="https://sidnabyg.jobbler.dk"
 REACT_APP_COMPANY_ID="602a645b88f8d210d6c34ca9"
+GENERATE_SOURCEMAP=false
