--- a/app/public/manifest - NOTjobbler.json
+++ b/app/public/manifest - NOTjobbler.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "Jobbler",
+  "short_name": "Time logger",
   "name": "Jobbler - Time log & reporting",
   "icons": [
     {
-      "src": "icons/favicon.ico",
+      "src": "icons/sidnabyg/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "icons/android-chrome-192x192.png",
+      "src": "icons/sidnabyg/android-chrome-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icons/android-chrome-512x512.png",
+      "src": "icons/sidnabyg/android-chrome-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
