--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set GENERATE_SOURCEMAP=true && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
