Updated homepage link

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://agrisj.github.io/jobbler-time-logger/app",
+  "homepage": "https://agrisj.github.io/jobbler-time-logger",
   "name": "jobbler",
   "version": "0.1.16",
   "private": true,
