Updated icons paths

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://agrisj.github.io/jobbler-time-logger",
-  "name": "jobbler",
+  "name": "sidnabyg",
   "version": "0.1.16",
   "private": true,
   "dependencies": {
